Uploaded image for project: 'Lustre'
  1. Lustre
  2. LU-14397

A race between lock enqueue and idle import

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: Major Major
    • Lustre 2.15.0
    • Lustre 2.14.0
    • 3
    • 9223372036854775807

      There is a window after ptlrpc_check_import_is_idle() and setting LUSTRE_IMP_CONNECTING for lock enqueue. The lock get granted on OST and is returned to the client. Server's lock is destroyed on OST_DISCONNECT.

            aboyko Alexander Boyko
            aboyko Alexander Boyko
            Votes:
            0 Vote for this issue
            Watchers:
            5 Start watching this issue

              Created:
              Updated:
              Resolved: