lustre/include/obd_support.h
@@ -455,6 +455,7 @@ extern char obd_jobid_var[];
 #define OBD_FAIL_PTLRPC_ROUND_XID	 0x530
 #define OBD_FAIL_PTLRPC_CONNECT_RACE	 0x531
 #define OBD_FAIL_NET_ERROR_RPC		 0x532
+#define OBD_FAIL_PTLRPC_IDLE_RACE	 0x533
 
 #define OBD_FAIL_OBD_PING_NET            0x600
 /*	OBD_FAIL_OBD_LOG_CANCEL_NET      0x601 obsolete since 1.5 */
